[#102][Refactor] 좋아요한 장소 리스트 조회 쿼리문 개선